# rdxl_static_template

./: .gitignore  Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs  run.rs  site.rs  template.rs  www.rs
tests/: template.rs  www.rs
tests/pages/: index.html  page1.html
