[package]
name = "rdxl_static_template"
version = "0.0.1"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT"
description = "Template for Static Site Generation with RDXL"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/rdxl_static_template"

[build-dependencies]
rdxl_static = "0.0.15"

[dependencies]
rdxl_static = "0.0.15"

[[bin]]
name = "run"
path = "src/run.rs"
