[package]
name = "rdxl_static_template"
version = "0.0.1"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT"
description = "Template for Static Site Generation with RDXL"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/rdxl_static_template"

[dependencies]
libc = "0.2"
ctor = "0.1"
rdxl = "0.5.11"
rdxl_static = "0.0.38"

